# railway-django-nextjs

./: README.md
.husky/: pre-commit  pre-push
backend/: Pipfile  Procfile  pyproject.toml  railway.toml  users.json
backend/main/: schema.py  settings.py  urls.py
backend/users/migrations/: 0001_initial.py
frontend/: .eslintrc.json  package.json  railway.toml  tailwind.config.js
frontend/.generators/component/: index.js
frontend/.generators/component/base/templates/: BaseTemplate.mocks.ts  BaseTemplate.tsx
frontend/.generators/component/variant/: index.js
frontend/.generators/component/variant/templates/: BaseVariantTemplate.mocks.ts  (+2 more)
frontend/.storybook/: main.js  preview.js
frontend/components/button/: Button.mocks.ts  Button.stories.tsx  Button.tsx
frontend/components/error/: Error.mocks.ts  Error.stories.tsx  Error.tsx
frontend/components/icon/: Icon.mocks.ts  Icon.stories.tsx  Icon.tsx
frontend/components/layout/head/: HeadElement.mocks.ts  HeadElement.stories.tsx  HeadElement.tsx
frontend/components/layout/nav/: Nav.mocks.ts  Nav.stories.tsx  Nav.tsx  NavItem.mocks.ts  NavItem.stories.tsx  NavItem.tsx
frontend/components/layout/primary/: Layout.mocks.ts  Layout.stories.tsx  Layout.tsx
frontend/components/loading/: Loading.mocks.ts  Loading.stories.tsx  Loading.tsx
frontend/components/page-not-found/: PageNotFound.stories.tsx  PageNotFound.tsx
frontend/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx  login.tsx
frontend/store/: auth-context.tsx
frontend/styles/: globals.css
frontend/utils/: parseErrors.tsx
